Improved overall performance by fall back non-answer processes, and fixing issues with NER tagging.

--- a/Basic QA system - Final Workflow.ipynb
+++ b/Basic QA system - Final Workflow.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 248,
    "metadata": {
     "collapsed": true
    },
@@ -602,9 +602,11 @@
     "    return newWordTags\n",
     "        \n",
     "def combineTags(wordTags):\n",
+    "    \n",
     "    newTags = []\n",
     "    prevWord = wordTags[0][0]\n",
     "    prevTag = wordTags[0][1]\n",
+    "    \n",
     "    for (word, tag) in wordTags[1:]:\n",
     "        if tag == 'NUMBER' and prevTag == 'PRENUM':\n",
     "            prevTag = 'NUMBER'\n",
@@ -619,25 +621,90 @@
     "        prevTag = tag\n",
     "    newTags.append((prevWord, prevTag))\n",
     "    \n",
+    "#     print newTags\n",
+    "    \n",
     "    newNewTags = []\n",
     "    prevWord = newTags[0][0]\n",
     "    prevTag = newTags[0][1]\n",
     "    if (prevTag == \"OTHERCAP\"):\n",
     "        prevTag = \"O\"\n",
-    "    for (word, tag) in wordTags[1:]:            \n",
+    "        \n",
+    "    for (word, tag) in newTags[1:]:\n",
+    "#         print tag, prevTag\n",
     "        if tag == prevTag :\n",
     "            prevWord += ' ' + word\n",
     "        else :\n",
     "            newNewTags.append((prevWord, prevTag))\n",
     "            prevWord = word\n",
     "            prevTag = tag\n",
+    "            \n",
     "    newNewTags.append((prevWord, prevTag))\n",
+    "    \n",
     "    return newNewTags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 249,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# tags1 = [   (u'Because', 'O'),\n",
+    "#     (u'of', 'STOPWORD'),\n",
+    "#     (u'financial hardships', u'O'),\n",
+    "#     (u'that', 'STOPWORD'),\n",
+    "#     (u'plagued', u'O'),\n",
+    "#     (u'the', 'STOPWORD'),\n",
+    "#     (u'recording industry', u'O'),\n",
+    "#     (u'during that', 'STOPWORD'),\n",
+    "#     (u'period (', u'O'),\n",
+    "#     (u'and', 'STOPWORD'),\n",
+    "#     (u'RCA', 'OTHERCAP'),\n",
+    "#     (u\"'s\", u'O'),\n",
+    "#     (u'own', 'STOPWORD'),\n",
+    "#     (u'parched revenues )', u'O'),\n",
+    "#     (u',', 'PUNC'),\n",
+    "#     (u'Victor', u'PERSON'),\n",
+    "#     (u\"'s long-playing records\", u'O'),\n",
+    "#     (u'were', 'STOPWORD'),\n",
+    "#     (u'discontinued', u'O'),\n",
+    "#     (u'by', 'STOPWORD'),\n",
+    "#     (u'early', 'PRENUM'),\n",
+    "#     (u'1933', 'NUMBER'),\n",
+    "#     (u'.', 'PUNC')]\n",
+    "\n",
+    "# tags2 = [   (u'At', 'O'),\n",
+    "#     (u'the', 'STOPWORD'),\n",
+    "#     (u'beginning', u'O'),\n",
+    "#     (u'of the', 'STOPWORD'),\n",
+    "#     (u'20th', 'NUMBER'),\n",
+    "#     (u'century', 'POSTNUM'),\n",
+    "#     (u',', 'PUNC'),\n",
+    "#     (u'the', 'STOPWORD'),\n",
+    "#     (u'early', 'PRENUM'),\n",
+    "#     (u'discs played', u'O'),\n",
+    "#     (u'for', 'STOPWORD'),\n",
+    "#     (u'two', 'NUMBER'),\n",
+    "#     (u'minutes', 'POSTNUM'),\n",
+    "#     (u',', 'PUNC'),\n",
+    "#     (u'the same as', 'STOPWORD'),\n",
+    "#     (u'early', 'PRENUM'),\n",
+    "#     (u'cylinder records', u'O'),\n",
+    "#     (u'.', 'PUNC')]\n",
+    "\n",
+    "# tags3 = [       (u'early', 'PRENUM'),\n",
+    "#     (u'1933', 'NUMBER'), (u'for', 'STOPWORD'),\n",
+    "#     (u'two', 'NUMBER'),\n",
+    "#     (u'minutes', 'POSTNUM'), ]\n",
+    "\n",
+    "# pp.pprint(combineTags(tags3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
    "metadata": {
     "collapsed": false
    },
@@ -673,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 251,
    "metadata": {
     "collapsed": false
    },
@@ -691,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 252,
    "metadata": {
     "collapsed": false
    },
@@ -735,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 253,
    "metadata": {
     "collapsed": false
    },
@@ -758,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 254,
    "metadata": {
     "collapsed": false
    },
@@ -774,18 +841,17 @@
       "                          (u'had a', 'STOPWORD'),\n",
       "                          (u'playing time', u'O'),\n",
       "                          (u'of', 'STOPWORD'),\n",
-      "                          (u'eight', 'NUMBER'),\n",
-      "                          (u'minutes', 'POSTNUM'),\n",
+      "                          (u'eight minutes', 'NUMBER'),\n",
       "                          (u'.', 'PUNC')],\n",
       "        'question_index': 0,\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Ner Correct:  60\n",
-      "Ner Wrong:  344\n",
+      "Ner Correct:  67\n",
+      "Ner Wrong:  337\n",
       "Ner Total:  404\n",
-      "Ner Overall Average %:  0.148514851485\n",
-      "Ner Correct Average of Previous %:  0.384615384615\n",
+      "Ner Overall Average %:  0.165841584158\n",
+      "Ner Correct Average of Previous %:  0.429487179487\n",
       "\n"
      ]
     }
@@ -796,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 271,
    "metadata": {
     "collapsed": false
    },
@@ -812,18 +878,17 @@
       "                          (u'had a', 'STOPWORD'),\n",
       "                          (u'playing time', u'O'),\n",
       "                          (u'of', 'STOPWORD'),\n",
-      "                          (u'eight', 'NUMBER'),\n",
-      "                          (u'minutes', 'POSTNUM'),\n",
+      "                          (u'eight minutes', 'NUMBER'),\n",
       "                          (u'.', 'PUNC')],\n",
       "        'question_index': 0,\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Ner Correct:  20165\n",
-      "Ner Wrong:  49994\n",
+      "Ner Correct:  20067\n",
+      "Ner Wrong:  50092\n",
       "Ner Total:  70159\n",
-      "Ner Overall Average %:  0.287418577802\n",
-      "Ner Correct Average of Previous %:  0.461663499622\n",
+      "Ner Overall Average %:  0.286021750595\n",
+      "Ner Correct Average of Previous %:  0.459419858513\n",
       "\n"
      ]
     }
@@ -834,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 255,
    "metadata": {
     "collapsed": false
    },
@@ -860,11 +925,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Ner Correct:  2460\n",
-      "Ner Wrong:  6003\n",
+      "Ner Correct:  2415\n",
+      "Ner Wrong:  6048\n",
       "Ner Total:  8463\n",
-      "Ner Overall Average %:  0.290677064871\n",
-      "Ner Correct Average of Previous %:  0.486166007905\n",
+      "Ner Overall Average %:  0.285359801489\n",
+      "Ner Correct Average of Previous %:  0.477272727273\n",
       "\n"
      ]
     }
@@ -875,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 276,
    "metadata": {
     "collapsed": false
    },
@@ -906,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 257,
    "metadata": {
     "collapsed": true
    },
@@ -933,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 258,
    "metadata": {
     "collapsed": true
    },
@@ -974,7 +1039,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 259,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# First, answers whose content words all appear in the question should be ranked lowest.\n",
+    "\n",
+    "def first_filter_object(question, answer_entities):\n",
+    "   \n",
+    "    ranked_list = []\n",
+    "    \n",
+    "    question = set(pre_process_tf_idf(question))\n",
+    "    \n",
+    "#     print question\n",
+    "#     print\n",
+    "    \n",
+    "    for entity in answer_entities:\n",
+    "\n",
+    "        raw_span = entity[0]\n",
+    "        span_tag = entity[1]\n",
+    "        \n",
+    "        set_span = set(pre_process_tf_idf(raw_span))\n",
+    "        \n",
+    "        if span_tag != \"STOPWORD\" and span_tag !=\"PUNC\": #span_tag != \"O\" and\n",
+    "            \n",
+    "            if span_tag == \"O\":\n",
+    "                \n",
+    "                if len(set_span) > 2:\n",
+    "                    ranked_list.append([entity, 0])\n",
+    "            \n",
+    "            elif set_span.issubset(question):\n",
+    "                \n",
+    "                ranked_list.append([entity, 1])\n",
+    "#                 print \"IN\", raw_span, span_tag, set_span, question\n",
+    "                \n",
+    "            else:\n",
+    "                \n",
+    "                ranked_list.append([entity, 2])\n",
+    "#                 print \"OUT\", raw_span, span_tag, set_span, question\n",
+    "    \n",
+    "    return sorted(ranked_list, key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
    "metadata": {
     "collapsed": true
    },
@@ -1008,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 261,
    "metadata": {
     "collapsed": false
    },
@@ -1031,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 262,
    "metadata": {
     "collapsed": true
    },
@@ -1119,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 263,
    "metadata": {
     "collapsed": true
    },
@@ -1143,9 +1254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 264,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1180,6 +1302,28 @@
     "    #         pp.pprint(top_answer)        \n",
     "            predicted_answer = top_answer[0][0]\n",
     "        \n",
+    "        else:\n",
+    "            \n",
+    "            first_pass = first_filter_object(question, result_b[\"candidates\"])\n",
+    "\n",
+    "            second_pass = second_filter(question, first_pass)\n",
+    "\n",
+    "            third_pass = third_filter(question, result_b[\"candidates\"], second_pass)\n",
+    "\n",
+    "            fourth_pass = reduce_rank(third_pass)   \n",
+    "            \n",
+    "            if len(fourth_pass) > 0:\n",
+    "\n",
+    "                top_answer = fourth_pass[0]\n",
+    "        #         pp.pprint(top_answer)        \n",
+    "                predicted_answer = top_answer[0][0]\n",
+    "            \n",
+    "            else:\n",
+    "\n",
+    "        #         pp.pprint(top_answer)        \n",
+    "                predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
+    "            \n",
+    "        \n",
     "        result_c = {\n",
     "            \"set_index\"  : result_b[\"set_index\"],\n",
     "            \"question_index\" : result_b[\"question_index\"],\n",
@@ -1196,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 266,
    "metadata": {
     "collapsed": true
    },
@@ -1214,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 267,
    "metadata": {
     "collapsed": true
    },
@@ -1251,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 268,
    "metadata": {
     "collapsed": true
    },
@@ -1276,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 269,
    "metadata": {
     "collapsed": false
    },
@@ -1292,21 +1436,19 @@
       "                          (u'had a', 'STOPWORD'),\n",
       "                          (u'playing time', u'O'),\n",
       "                          (u'of', 'STOPWORD'),\n",
-      "                          (u'eight', 'NUMBER'),\n",
-      "                          (u'minutes', 'POSTNUM'),\n",
+      "                          (u'eight minutes', 'NUMBER'),\n",
       "                          (u'.', 'PUNC')],\n",
-      "        'predicted_answer': u'eight',\n",
+      "        'predicted_answer': u'eight minutes',\n",
       "        'question_index': 0,\n",
-      "        'ranked_answers': [   [(u'eight', 'NUMBER'), 0.44999999999999996],\n",
-      "                              [(u'minutes', 'POSTNUM'), 0.30000000000000004]],\n",
+      "        'ranked_answers': [[(u'eight minutes', 'NUMBER'), 0.4]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  27\n",
-      "Rank Wrong:  377\n",
+      "Rank Correct:  36\n",
+      "Rank Wrong:  368\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0668316831683\n",
-      "Rank Correct Average of Previous %:  0.45\n",
+      "Rank Overall Average %:  0.0891089108911\n",
+      "Rank Correct Average of Previous %:  0.537313432836\n",
       "\n"
      ]
     }
@@ -1317,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 272,
    "metadata": {
     "collapsed": false
    },
@@ -1333,21 +1475,19 @@
       "                          (u'had a', 'STOPWORD'),\n",
       "                          (u'playing time', u'O'),\n",
       "                          (u'of', 'STOPWORD'),\n",
-      "                          (u'eight', 'NUMBER'),\n",
-      "                          (u'minutes', 'POSTNUM'),\n",
+      "                          (u'eight minutes', 'NUMBER'),\n",
       "                          (u'.', 'PUNC')],\n",
-      "        'predicted_answer': u'eight',\n",
+      "        'predicted_answer': u'eight minutes',\n",
       "        'question_index': 0,\n",
-      "        'ranked_answers': [   [(u'eight', 'NUMBER'), 0.44999999999999996],\n",
-      "                              [(u'minutes', 'POSTNUM'), 0.30000000000000004]],\n",
+      "        'ranked_answers': [[(u'eight minutes', 'NUMBER'), 0.4]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  9508\n",
-      "Rank Wrong:  60651\n",
+      "Rank Correct:  9895\n",
+      "Rank Wrong:  60264\n",
       "Rank Total:  70159\n",
-      "Rank Overall Average %:  0.135520745735\n",
-      "Rank Correct Average of Previous %:  0.471510042152\n",
+      "Rank Overall Average %:  0.141036787868\n",
+      "Rank Correct Average of Previous %:  0.493098121294\n",
       "\n"
      ]
     }
@@ -1358,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 270,
    "metadata": {
     "collapsed": false
    },
@@ -1389,11 +1529,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1094\n",
-      "Rank Wrong:  7369\n",
+      "Rank Correct:  1134\n",
+      "Rank Wrong:  7329\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.129268580881\n",
-      "Rank Correct Average of Previous %:  0.444715447154\n",
+      "Rank Overall Average %:  0.133995037221\n",
+      "Rank Correct Average of Previous %:  0.469565217391\n",
       "\n"
      ]
     }
@@ -1404,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 281,
    "metadata": {
     "collapsed": true
    },
@@ -1459,16 +1599,16 @@
     "            print\n",
     "            print \"Correct Answer: (Part C)\"\n",
     "            print\n",
-    "            pp.pprint(question[\"answer\"])            \n",
+    "            pp.pprint(question[\"answer\"])     \n",
     "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 282,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1497,10 +1637,9 @@
       "    (u'for', 'STOPWORD'),\n",
       "    (u'music reproduction', u'O'),\n",
       "    (u'until', 'STOPWORD'),\n",
-      "    (u'late', 'PRENUM'),\n",
+      "    (u'late', 'O'),\n",
       "    (u'in the', 'STOPWORD'),\n",
-      "    (u'20th', 'NUMBER'),\n",
-      "    (u'century', 'POSTNUM'),\n",
+      "    (u'20th century', 'NUMBER'),\n",
       "    (u',', 'PUNC'),\n",
       "    (u'replacing', u'O'),\n",
       "    (u'the', 'STOPWORD'),\n",
@@ -1508,32 +1647,23 @@
       "    (u'which it had', 'STOPWORD'),\n",
       "    (u'co-existed', u'O'),\n",
       "    (u'from the', 'STOPWORD'),\n",
-      "    (u'late', 'PRENUM'),\n",
-      "    (u'1880s', 'NUMBER'),\n",
+      "    (u'late 1880s', 'NUMBER'),\n",
       "    (u'through to the', 'STOPWORD'),\n",
       "    (u'1920s\\u2013by', 'NUMBER'),\n",
       "    (u'the', 'STOPWORD'),\n",
-      "    (u'late', 'PRENUM'),\n",
-      "    (u'1920s', 'NUMBER'),\n",
+      "    (u'late 1920s', 'NUMBER'),\n",
       "    (u'.', 'PUNC')]\n",
       "\n",
       "Ranked Answers: (Part C)\n",
       "\n",
-      "[   [(u'late', 'PRENUM'), 3],\n",
-      "    [(u'20th', 'NUMBER'), 3],\n",
-      "    [(u'century', 'POSTNUM'), 3],\n",
-      "    [(u'late', 'PRENUM'), 3],\n",
-      "    [(u'1880s', 'NUMBER'), 3],\n",
-      "    [(u'1920s\\u2013by', 'NUMBER'), 3],\n",
-      "    [(u'late', 'PRENUM'), 3],\n",
-      "    [(u'1920s', 'NUMBER'), 3],\n",
-      "    [(u'The phonograph disc record', 'O'), 2],\n",
-      "    [(u'primary medium used', u'O'), 2],\n",
-      "    [(u'phonograph cylinder record\\u2013with', u'O'), 2]]\n",
+      "[   [(u'20th century', 'NUMBER'), 1.6500000000000001],\n",
+      "    [(u'late 1880s', 'NUMBER'), 1.05],\n",
+      "    [(u'1920s\\u2013by', 'NUMBER'), 0.9375],\n",
+      "    [(u'late 1920s', 'NUMBER'), 0.8250000000000001]]\n",
       "\n",
       "Predicted Answer: (Part C)\n",
       "\n",
-      "u'late'\n",
+      "u'20th century'\n",
       "\n",
       "Correct Answer: (Part C)\n",
       "\n",
@@ -1547,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 277,
    "metadata": {
     "collapsed": false
    },
@@ -1559,8 +1689,14 @@
       "Processing rank:  test\n",
       "\n",
       "Part C Output: \n",
-      "[   {   'predicted_answer': u'Crimean War',\n",
+      "[   {   'candidates': [   (u'a', 'STOPWORD'),\n",
+      "                          (u'forgotten theatre', u'O'),\n",
+      "                          (u'of the', 'STOPWORD'),\n",
+      "                          (u'Crimean War', 'OTHERCAP'),\n",
+      "                          (u'.', 'PUNC')],\n",
+      "        'predicted_answer': u'Crimean War',\n",
       "        'question_index': 0,\n",
+      "        'ranked_answers': [[(u'Crimean War', 'OTHERCAP'), 2]],\n",
       "        'sentence_index': 283,\n",
       "        'set_index': 0}]\n",
       "\n",
@@ -1574,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 278,
    "metadata": {
     "collapsed": false
    },
@@ -1612,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 279,
    "metadata": {
     "collapsed": false
    },
@@ -1623,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 280,
    "metadata": {
     "collapsed": true
    },
