Incremental by allowing O and STOPWORDS but not punct, until later fallback

--- a/Basic QA system - Final Workflow.ipynb
+++ b/Basic QA system - Final Workflow.ipynb
@@ -1085,7 +1085,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 283,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# First, answers whose content words all appear in the question should be ranked lowest.\n",
+    "\n",
+    "def first_filter_object_stop(question, answer_entities):\n",
+    "   \n",
+    "    ranked_list = []\n",
+    "    \n",
+    "    question = set(pre_process_tf_idf(question))\n",
+    "    \n",
+    "#     print question\n",
+    "#     print\n",
+    "    \n",
+    "    for entity in answer_entities:\n",
+    "\n",
+    "        raw_span = entity[0]\n",
+    "        span_tag = entity[1]\n",
+    "        \n",
+    "        set_span = set(pre_process_tf_idf(raw_span))\n",
+    "        \n",
+    "        if span_tag !=\"PUNC\": #span_tag != \"O\" and\n",
+    "            \n",
+    "            if span_tag == \"O\" or span_tag == \"STOPWORD\":\n",
+    "                \n",
+    "                if len(set_span) > 2:\n",
+    "                    \n",
+    "                    ranked_list.append([entity, 0])\n",
+    "            \n",
+    "            elif set_span.issubset(question):\n",
+    "                \n",
+    "                ranked_list.append([entity, 1])\n",
+    "#                 print \"IN\", raw_span, span_tag, set_span, question\n",
+    "                \n",
+    "            else:\n",
+    "                \n",
+    "                ranked_list.append([entity, 2])\n",
+    "#                 print \"OUT\", raw_span, span_tag, set_span, question\n",
+    "    \n",
+    "    return sorted(ranked_list, key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
    "metadata": {
     "collapsed": true
    },
@@ -1119,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 285,
    "metadata": {
     "collapsed": false
    },
@@ -1142,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 286,
    "metadata": {
     "collapsed": true
    },
@@ -1230,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 287,
    "metadata": {
     "collapsed": true
    },
@@ -1254,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 288,
    "metadata": {
     "collapsed": true
    },
@@ -1265,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 298,
    "metadata": {
     "collapsed": false
    },
@@ -1319,9 +1366,25 @@
     "                predicted_answer = top_answer[0][0]\n",
     "            \n",
     "            else:\n",
+    "                \n",
+    "                first_pass = first_filter_object_stop(question, result_b[\"candidates\"])\n",
+    "\n",
+    "                second_pass = second_filter(question, first_pass)\n",
+    "\n",
+    "                third_pass = third_filter(question, result_b[\"candidates\"], second_pass)\n",
+    "\n",
+    "                fourth_pass = reduce_rank(third_pass)   \n",
+    "\n",
+    "                if len(fourth_pass) > 0:\n",
+    "\n",
+    "                    top_answer = fourth_pass[0]\n",
+    "            #         pp.pprint(top_answer)        \n",
+    "                    predicted_answer = top_answer[0][0]                \n",
+    "                \n",
+    "                else:\n",
     "\n",
     "        #         pp.pprint(top_answer)        \n",
-    "                predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
+    "                    predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
     "            \n",
     "        \n",
     "        result_c = {\n",
@@ -1340,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 299,
    "metadata": {
     "collapsed": true
    },
@@ -1358,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 300,
    "metadata": {
     "collapsed": true
    },
@@ -1395,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 301,
    "metadata": {
     "collapsed": true
    },
@@ -1420,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
@@ -1498,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 303,
    "metadata": {
     "collapsed": false
    },
@@ -1529,11 +1592,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1134\n",
-      "Rank Wrong:  7329\n",
+      "Rank Correct:  1135\n",
+      "Rank Wrong:  7328\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.133995037221\n",
-      "Rank Correct Average of Previous %:  0.469565217391\n",
+      "Rank Overall Average %:  0.134113198629\n",
+      "Rank Correct Average of Previous %:  0.469979296066\n",
       "\n"
      ]
     }
@@ -1677,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 304,
    "metadata": {
     "collapsed": false
    },
@@ -1759,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 305,
    "metadata": {
     "collapsed": true
    },
