--- a/derek -try final workflow.ipynb
+++ b/derek -try final workflow.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -327,8 +327,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -502,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -522,6 +521,13 @@
    ],
    "source": [
     "process_retrieval(\"test\", DATA, False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## entity extraction"
    ]
   },
   {
@@ -568,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -645,68 +651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# tags1 = [   (u'Because', 'O'),\n",
-    "#     (u'of', 'STOPWORD'),\n",
-    "#     (u'financial hardships', u'O'),\n",
-    "#     (u'that', 'STOPWORD'),\n",
-    "#     (u'plagued', u'O'),\n",
-    "#     (u'the', 'STOPWORD'),\n",
-    "#     (u'recording industry', u'O'),\n",
-    "#     (u'during that', 'STOPWORD'),\n",
-    "#     (u'period (', u'O'),\n",
-    "#     (u'and', 'STOPWORD'),\n",
-    "#     (u'RCA', 'OTHERCAP'),\n",
-    "#     (u\"'s\", u'O'),\n",
-    "#     (u'own', 'STOPWORD'),\n",
-    "#     (u'parched revenues )', u'O'),\n",
-    "#     (u',', 'PUNC'),\n",
-    "#     (u'Victor', u'PERSON'),\n",
-    "#     (u\"'s long-playing records\", u'O'),\n",
-    "#     (u'were', 'STOPWORD'),\n",
-    "#     (u'discontinued', u'O'),\n",
-    "#     (u'by', 'STOPWORD'),\n",
-    "#     (u'early', 'PRENUM'),\n",
-    "#     (u'1933', 'NUMBER'),\n",
-    "#     (u'.', 'PUNC')]\n",
-    "\n",
-    "# tags2 = [   (u'At', 'O'),\n",
-    "#     (u'the', 'STOPWORD'),\n",
-    "#     (u'beginning', u'O'),\n",
-    "#     (u'of the', 'STOPWORD'),\n",
-    "#     (u'20th', 'NUMBER'),\n",
-    "#     (u'century', 'POSTNUM'),\n",
-    "#     (u',', 'PUNC'),\n",
-    "#     (u'the', 'STOPWORD'),\n",
-    "#     (u'early', 'PRENUM'),\n",
-    "#     (u'discs played', u'O'),\n",
-    "#     (u'for', 'STOPWORD'),\n",
-    "#     (u'two', 'NUMBER'),\n",
-    "#     (u'minutes', 'POSTNUM'),\n",
-    "#     (u',', 'PUNC'),\n",
-    "#     (u'the same as', 'STOPWORD'),\n",
-    "#     (u'early', 'PRENUM'),\n",
-    "#     (u'cylinder records', u'O'),\n",
-    "#     (u'.', 'PUNC')]\n",
-    "\n",
-    "# tags3 = [       (u'early', 'PRENUM'),\n",
-    "#     (u'1933', 'NUMBER'), (u'for', 'STOPWORD'),\n",
-    "#     (u'two', 'NUMBER'),\n",
-    "#     (u'minutes', 'POSTNUM'), ]\n",
-    "\n",
-    "# pp.pprint(combineTags(tags3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -740,9 +687,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -758,9 +705,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -802,9 +749,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -825,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -862,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -899,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -940,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -970,8 +917,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer Ranking"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -992,13 +946,15 @@
     "        return \"NUMBER\"\n",
     "    if 'what year' in question:\n",
     "        return \"NUMBER\"\n",
+    "    if 'What year' in question:\n",
+    "        return \"NUMBER\"\n",
     "    else:\n",
     "        return \"O\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1039,17 +995,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# First, answers whose content words all appear in the question should be ranked lowest.\n",
-    "\n",
+    "## if no output finally\n",
     "def first_filter_object(question, answer_entities):\n",
     "   \n",
     "    ranked_list = []\n",
+    "    other_list = []\n",
     "    \n",
     "    question = set(pre_process_tf_idf(question))\n",
     "    \n",
@@ -1066,7 +1023,7 @@
     "        if span_tag != \"STOPWORD\" and span_tag !=\"PUNC\": #span_tag != \"O\" and\n",
     "            \n",
     "            if span_tag == \"O\":\n",
-    "                \n",
+    "                #print set_span\n",
     "                if len(set_span) > 2:\n",
     "                    ranked_list.append([entity, 0])\n",
     "            \n",
@@ -1085,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1119,9 +1076,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 55,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1132,7 +1089,8 @@
     "    tagged_sent = nltk.pos_tag(lemmatized_sentence)\n",
     "    final = []\n",
     "    for word, tag in tagged_sent:\n",
-    "        if \"V\" in tag or \"NN\" in tag:\n",
+    "        #exapnd the open-class word to noun,verb,adj and adv\n",
+    "        if \"V\" in tag or \"NN\" in tag or 'JJ' in tag or 'RB' in tag:\n",
     "#             final.append((word,tag))\n",
     "            final.append(word)\n",
     "            \n",
@@ -1142,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -1230,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -1254,20 +1212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import random\n"
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 97,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1320,8 +1278,13 @@
     "            \n",
     "            else:\n",
     "\n",
-    "        #         pp.pprint(top_answer)        \n",
+    "        #         pp.pprint(top_answer)    \n",
     "                predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
+    "                for i in range(10):\n",
+    "                    if predicted_answer in stop_words or predicted_answer in punct_tokens:\n",
+    "                        predicted_answer = random.choice(result_b[\"candidates\"])[0]\n",
+    "                    else:\n",
+    "                        continue\n",
     "            \n",
     "        \n",
     "        result_c = {\n",
@@ -1340,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1358,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1395,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1420,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1440,15 +1403,16 @@
       "                          (u'.', 'PUNC')],\n",
       "        'predicted_answer': u'eight minutes',\n",
       "        'question_index': 0,\n",
-      "        'ranked_answers': [[(u'eight minutes', 'NUMBER'), 0.4]],\n",
+      "        'ranked_answers': [   [   (u'eight minutes', 'NUMBER'),\n",
+      "                                  0.2857142857142857]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  36\n",
-      "Rank Wrong:  368\n",
+      "Rank Correct:  34\n",
+      "Rank Wrong:  370\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0891089108911\n",
-      "Rank Correct Average of Previous %:  0.537313432836\n",
+      "Rank Overall Average %:  0.0841584158416\n",
+      "Rank Correct Average of Previous %:  0.507462686567\n",
       "\n"
      ]
     }
@@ -1459,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -1479,15 +1443,16 @@
       "                          (u'.', 'PUNC')],\n",
       "        'predicted_answer': u'eight minutes',\n",
       "        'question_index': 0,\n",
-      "        'ranked_answers': [[(u'eight minutes', 'NUMBER'), 0.4]],\n",
+      "        'ranked_answers': [   [   (u'eight minutes', 'NUMBER'),\n",
+      "                                  0.2857142857142857]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  9895\n",
-      "Rank Wrong:  60264\n",
+      "Rank Correct:  10007\n",
+      "Rank Wrong:  60152\n",
       "Rank Total:  70159\n",
-      "Rank Overall Average %:  0.141036787868\n",
-      "Rank Correct Average of Previous %:  0.493098121294\n",
+      "Rank Overall Average %:  0.142633161818\n",
+      "Rank Correct Average of Previous %:  0.49867942393\n",
       "\n"
      ]
     }
@@ -1498,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -1529,11 +1494,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1134\n",
-      "Rank Wrong:  7329\n",
+      "Rank Correct:  1139\n",
+      "Rank Wrong:  7324\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.133995037221\n",
-      "Rank Correct Average of Previous %:  0.469565217391\n",
+      "Rank Overall Average %:  0.134585844263\n",
+      "Rank Correct Average of Previous %:  0.471635610766\n",
       "\n"
      ]
     }
@@ -1544,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -1605,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1677,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1710,9 +1675,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1748,9 +1713,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1759,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -1770,12 +1735,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set(['!', '#', '\"', '%', '$', \"'\", '&', ')', '(', '+', '*', '-', ',', '/', '.', ';', ':', '=', '<', '?', '>', '@', '[', ']', '\\\\', '_', '^', '`', '{', '}', '|', '~'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print punct_tokens"
+   ]
   },
   {
    "cell_type": "code",
@@ -1788,7 +1763,6 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
