--- a/Basic QA system - Enhancements.ipynb
+++ b/Basic QA system - Enhancements.ipynb
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -1067,7 +1067,7 @@
     "            \n",
     "            if span_tag == \"O\":\n",
     "                \n",
-    "                if len(set_span) > 2:\n",
+    "                if len(set_span) > 1:\n",
     "                    ranked_list.append([entity, 0])\n",
     "            \n",
     "            elif set_span.issubset(question):\n",
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -1113,7 +1113,7 @@
     "            \n",
     "            if span_tag == \"O\" or span_tag == \"STOPWORD\":\n",
     "                \n",
-    "                if len(set_span) > 2:\n",
+    "                if len(set_span) > 1:\n",
     "                    \n",
     "                    ranked_list.append([entity, 0])\n",
     "            \n",
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 153,
    "metadata": {
     "collapsed": true
    },
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -1384,7 +1384,7 @@
     "                else:\n",
     "\n",
     "        #         pp.pprint(top_answer)        \n",
-    "                    hits = [x for x in result_b[\"candidates\"] if x[1] != \"PUNC\"]                        \n",
+    "                    hits = [x for x in result_b[\"candidates\"] if x[1] != \"PUNC\" or x[1] == \"STOPWORDS\"]                        \n",
     "                    predicted_answer = random.choice(hits)[0]\n",
     "            \n",
     "        \n",
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 157,
    "metadata": {
     "collapsed": true
    },
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 158,
    "metadata": {
     "collapsed": true
    },
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -1508,11 +1508,11 @@
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  36\n",
-      "Rank Wrong:  368\n",
+      "Rank Correct:  33\n",
+      "Rank Wrong:  371\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0891089108911\n",
-      "Rank Correct Average of Previous %:  0.537313432836\n",
+      "Rank Overall Average %:  0.0816831683168\n",
+      "Rank Correct Average of Previous %:  0.492537313433\n",
       "\n"
      ]
     }
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -1547,11 +1547,11 @@
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  9901\n",
-      "Rank Wrong:  60258\n",
+      "Rank Correct:  9952\n",
+      "Rank Wrong:  60207\n",
       "Rank Total:  70159\n",
-      "Rank Overall Average %:  0.141122307901\n",
-      "Rank Correct Average of Previous %:  0.493397119649\n",
+      "Rank Overall Average %:  0.141849228182\n",
+      "Rank Correct Average of Previous %:  0.495938605671\n",
       "\n"
      ]
     }
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -1593,11 +1593,11 @@
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1139\n",
-      "Rank Wrong:  7324\n",
+      "Rank Correct:  1156\n",
+      "Rank Wrong:  7307\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.134585844263\n",
-      "Rank Correct Average of Previous %:  0.471635610766\n",
+      "Rank Overall Average %:  0.136594588207\n",
+      "Rank Correct Average of Previous %:  0.47867494824\n",
       "\n"
      ]
     }
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
